		-Removed "reload" command as restart is more thorough
		-Changed the way ips are outputted by the "players" command - they are now put on the next line, so that people with rediculously long names don't obscure their ip address for kicking/banning
		-Made the server tell all players that it's changing map so when they disconnect they don't think it crashed
		-Made server console output whether the level file to load was found or not
	-Other
		-Help menu updated to reflect new key layout
		-Server browser dims servers that are full
		-Joining games now displays "Connecting..." while waiting for the server response

Bugfixes:
	-Rare crash when 3D sound is played with invalid volume
	-Spaces are now supported in names
	-Fixed all of the warnings in source aside from "comparison to integral constant"
	-Crash when sending a chat message at the end of a game
	-All network communications now have exceptions caught - should make servers significantly more stable, as well as clients.
	-Staggered updates to public server list should reduce lag but also reduce the accuracy of server listing player counts
	-Public server list updates are run in a seperate thread to remove lag on player join
	-Fixed aforementioned thread which would go into an infinite cycle of stopping and starting
	-Map sending is threaded to further remove lag on player join
	-Various crashes related to bad text input
	-Griefers could make themselves unbannable by obscuring their ip address with a rediculously long name

Buglist:
	-Every use of "reload" creates a map with more lava blocks - may not be clearing previous map correctly
	-Clipping through corners allows rapid ascension to surface
	-Can at various angles see thruogh walls
	-Death messages do not always display
	-Players can use tools and block types outside of their class
	-At various angles building blocks build them in thin air, unattached to any nearby block